# E-Commerce-Sales-Intelligence-Pipeline

./: .gitignore  README.md  ingest.py  pyproject.toml
dbt/ecommerce_pipeline/: dbt_project.yml
dbt/ecommerce_pipeline/models/: schema.yml
dbt/ecommerce_pipeline/models/marts/: dim_customers.sql  fct_orders.sql
dbt/ecommerce_pipeline/models/staging/: sources.yml  stg_raw_order_items.sql  stg_raw_orders.sql  stg_raw_products.sql  stg_raw_users.sql
dbt/ecommerce_pipeline/tests/: check_dim_customers_total_orders_not_negative.sql  check_dim_customers_total_spend_not_negative.sql  check_fct_orders_sale_price_positive.sql  check_positive_cost.sql  check_positive_num_items.sql  check_positive_retail_price.sql  check_positive_sale_price.sql  check_retail_price_not_below_sale_price.sql  check_sale_price_not_below_cost.sql.sql  check_user_age.sql  check_valid_email.sql
jupyter_analysis/: analysis.ipynb  sales_intelligence_report_upgraded.html
terraform/: .gitignore  main.tf  variables.tf
