[project]
name = "pre-project"
version = "0.1.0"
description = "End-to-end e-commerce sales intelligence pipeline: BigQuery ingestion, dbt transforms, Python analysis."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "db-dtypes==1.4.4",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-bigquery-storage==2.38.0",
    "google-cloud-storage==3.10.1",
    "ipykernel==7.2.0",
    "jinja2==3.1.6",
    "matplotlib==3.10.3",
    "numpy==2.4.6",
    "pyarrow==24.0.0",
    "python-dotenv==1.2.2",
    "pandas==3.0.3",
    "seaborn==0.13.2",
]
 
[project.optional-dependencies]
dev = [
    "jupyter==1.1.1",
    "jupyterlab==4.4.3",
    "nbconvert==7.16.6",
]
 
 
[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "jupyterlab==4.4.3",
    "nbconvert==7.16.6",
]
 